@@ -3,6 +3,7 @@ Revision history for Perl extension PPM::Repositories
 0.17 Tue May 25 2010
     - add 5.12 repos for bribes, trouchelle and uwinnipeg [RT#57814]
     - add bioperl and bioperl-rc to the old-style interface too
+    - prune dead repositories: devhelp, jenda, openi, sablotron
 
 0.16 Tue May 11 2010
     - move test.pl to t/test.t to run it via Test::Harness
